--- a/index.html
+++ b/index.html
@@ -5,8 +5,121 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header class="main-header">
+	  <div class="main-menu">
+	    <a class="logo">
+		  <img src="#" width="1" height="1" alt="Логотип Техномарт">
+		</a>
+		  <!-- Поле форма поиска -->
+		  <a class="bookmarks" href="#">Закладки</a>
+		  <a class="basket" href="#">Корзина</a>
+		  <a class="order" href="#">Оформить заказ</a>
+	  </div>
+	  <div class="??????">
+	    <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>  
+		<div class="contacts">
+		  <!-- Поле телефон -->
+		  <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+		</div>
+		<ul class="user-navigation">
+		  <li>Войти</li>
+		  <li>Регистрация</li>
+		</ul>
+	  </div>
+	  <nav>
+	    <ul class="site-navigation">
+		  <li><a href="№">Главная</a></li>
+	      <li><a href="#">Компания</a></li>
+		  <li><a href="catalog.html">Каталог</a></li>
+		  <li><a href="#">Новости</a></li>
+		  <li><a href="#">Спецпредложения</a></li>
+		  <li><a href="#">Доставка</a></li>
+		  <li><a href="#">Контакты</a></li>
+		</ul>
+	  </nav>
+	</header>
+	<main>
+	  <section class="catalog">
+	 
+	  </section>
+	  <section class="popular_goods">
+	 
+	  </section>
+	  <section class="popular_manufacturers">
+	 
+	  </section>
+	  <section class="services">
+	 
+	  </section>
+	  <section class="information">
+	    <h2 class="visually-hidden">Информация о компании</h2>
+	    <div class="company">
+		  <h3>Компания «Техномарт»</h3>
+		  <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+		  <p>Мы можем доставить ваш товар в самые отдаленные точки России!
+          Техномарт работает со многими транспортными компаниями: </p>
+		  <ul class="transport-companies">
+		    <li>Деловые линии</li>
+			<li>Автотрейдинг</li>
+			<li>ЖелДорЭкспедиция</li>
+		  </ul>
+		  <a class="about-company button" href="#">Подробнее о компании</a>
+		</div>
+		<div class="map">
+		  <h3>Контакты</h3>
+		  <p>Вы можете забрать товар сами, 
+          заехав в наш офис:</p>
+		  <!-- Поле карты -->
+		  <a class="write button" href="#">Заблудились? Напишите нам!</a>
+		</div>
+	  </section>
+	</main> 
+	<footer>
+	  <div class="page-footer">
+	    <div class="page-footer-contacts">
+		  <img src="#" width="1" height="1" alt="Логотип Техномарт">
+		  <p>
+		    г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+		    +7 (812) 555-05-55
+		  </p>
+		</div>
+		<ul class="bottom-navigation">
+	      <li><a href="#">Компания</a></li>
+		  <li><a href="#">Новости</a></li>
+		  <li><a href="catalog.html">Каталог</a></li>
+		  <li><a href="#">Доставка</a></li>
+		  <li><a href="#">Контакты</a></li>
+		</ul>
+		<ul class="products">
+	      <li><a href="#">Материалы</a></li>
+		  <li><a href="#">Техника</a></li>
+		  <li><a href="#">Инструмент</a></li>
+		  <li><a href="#">Спецпредложения</a></li>
+		</ul>
+	  </div>
+	  <div class="bottom-footer">
+	    <p class="copyright">
+		  © 2010–2019 Компания «Техномарт»<br>
+           Все права защищены
+		</p>
+		<div class="social">
+		  <ul class="social-list">
+		    <li><a class="social-button" href="#">Вконтакте</a></li>
+			<li><a class="social-button" href="#">Фейсбук</a></li>
+			<li><a class="social-button" href="#">Инстаграм</a></li>
+		  </ul>
+	    </div>   
+		<div class="developer">
+		  <p>
+		    Обратная связь:
+            <a href="#">mail@htmlacademy.ru</a>
+		  </p>
+		  <p>
+		    Разработано —
+            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+		  </p>	  
+		</div>
+	  </div>
+	</footer>
   </body>
 </html>
