--- a/catalog.html
+++ b/catalog.html
@@ -1,262 +1,194 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
-    <header class="main-header">
-	  <div class="main-menu">
-	    <a class="logo">
-		  <img src="index.html" width="1" height="1" alt="Логотип Техномарт">
-		</a>
-		  <!-- Поле форма поиска -->
-		  <a class="bookmarks" href="#">Закладки</a>
-		  <a class="basket" href="#">Корзина</a>
-		  <a class="order" href="#">Оформить заказ</a>
-	  </div>
-	  <div class="??????">
-	    <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>  
-		<div class="contacts">
-		  <!-- Поле телефон -->
-		  <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-		</div>
-		<ul class="user-navigation">
-		  <li>Войти</li>
-		  <li>Регистрация</li>
-		</ul>
-	  </div>
-	  <nav>
-	    <ul class="site-navigation">
-		  <li><a href="№">Главная</a></li>
-	      <li><a href="#">Компания</a></li>
-		  <li><a href="catalog.html">Каталог</a></li>
-		  <li><a href="#">Новости</a></li>
-		  <li><a href="#">Спецпредложения</a></li>
-		  <li><a href="#">Доставка</a></li>
-		  <li><a href="#">Контакты</a></li>
-		</ul>
-	  </nav>
-	</header>
-	<main>
-	  <ul class="breadcrumbs">
-	    <li><a href="index.html"></a></li>
-		<li><a href="catalog.html">Каталог</a></li>
-		<li><a href="tool.html">Инструмент</a></li>
-		<li class="breadcrumbs-current">Перфораторы</li>
-	  </ul>
-	  <h1>Перфораторы</h1>
-	  <section class="filters">
-	   <h2 class="visually-hidden">Фильтр товаров</h2>
-	   <!-- 
-	   <div class="filters-price">
-		     Фильтр по цене
-		</div>
-		<div class="filters-manufacturers">
-		     Фильтр по производителям
-		</div>
-		<div class="filters-nutrition">
-		     Фильтр по питании
-		</div> -->
-	  </section>
-	  <section class="catalog">
-	    <h2 class="visually-hidden">Каталог перфораторов</h2>
-		<ul class="catalog-list">
-		  <li class="catalog-item">
-		    <h3>
-			  <a href="#">
-			    <span class="catalog-item-title">Перфоратор</span>
-				<span class="catalog-item-model">Bosch bfg 3000</span>
-			  </a>
-			</h3>
-			<a href="#">
-			  <img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 3000">
-			</a> 
-			<p class="catalog-item-price">
-			   <span class="old-price">22500 Р.</span>
-			   <a class="catalog-item-bиtton" href="#">15500 Р.</a>
-			</p>
-		  </li>
-		  <li class="catalog-item">
-		    <h3>
-			  <a href="#">
-			    <span class="catalog-item-title">Перфоратор</span>
-				<span class="catalog-item-model">Bosch bfg 6000</span>
-			  </a>
-			</h3>
-			<a href="#">
-			  <img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 6000">
-			</a> 
-			<p class="catalog-item-price">
-			   <span class="old-price">30500 Р.</span>
-			   <a class="catalog-item-bиtton" href="#">25500 Р.</a>
-			</p>
-		  </li>
-		  <li class="catalog-item">
-		    <h3>
-			  <a href="#">
-			    <span class="catalog-item-title">Перфоратор</span>
-				<span class="catalog-item-model">Bosch bfg 2000</span>
-			  </a>
-			</h3>
-			<a href="#">
-			  <img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 2000">
-			</a> 
-			<p class="catalog-item-price">
-			   <span class="old-price"></span>
-			   <a class="catalog-item-bиtton" href="#">12500 Р.</a>
-			</p>
-		  </li>
-          <li class="catalog-item">
-		    <h3>
-			  <a href="#">
-			    <span class="catalog-item-title">Перфоратор</span>
-				<span class="catalog-item-model">Bosch bfg 3000</span>
-			  </a>
-			</h3>
-			<a href="#">
-			  <img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 3000">
-			</a> 
-			<p class="catalog-item-price">
-			   <span class="old-price">22500 Р.</span>
-			   <a class="catalog-item-bиtton" href="#">15500 Р.</a>
-			</p>
-		  </li>
-		  <li class="catalog-item">
-		    <h3>
-			  <a href="#">
-			    <span class="catalog-item-title">Перфоратор</span>
-				<span class="catalog-item-model">Bosch bfg 6000</span>
-			  </a>
-			</h3>
-			<a href="#">
-			  <img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 6000">
-			</a> 
-			<p class="catalog-item-price">
-			   <span class="old-price">30500 Р.</span>
-			   <a class="catalog-item-bиtton" href="#">25500 Р.</a>
-			</p>
-		  </li>
-		  <li class="catalog-item">
-		    <h3>
-			  <a href="#">
-			    <span class="catalog-item-title">Перфоратор</span>
-				<span class="catalog-item-model">Bosch bfg 2000</span>
-			  </a>
-			</h3>
-			<a href="#">
-			  <img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 2000">
-			</a> 
-			<p class="catalog-item-price">
-			   <span class="old-price"></span>
-			   <a class="catalog-item-bиtton" href="#">12500 Р.</a>
-			</p>
-		  </li>
-          <li class="catalog-item">
-		    <h3>
-			  <a href="#">
-			    <span class="catalog-item-title">Перфоратор</span>
-				<span class="catalog-item-model">Bosch bfg 3000</span>
-			  </a>
-			</h3>
-			<a href="#">
-			  <img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 3000">
-			</a> 
-			<p class="catalog-item-price">
-			   <span class="old-price">22500 Р.</span>
-			   <a class="catalog-item-bиtton" href="#">15500 Р.</a>
-			</p>
-		  </li>
-		  <li class="catalog-item">
-		    <h3>
-			  <a href="#">
-			    <span class="catalog-item-title">Перфоратор</span>
-				<span class="catalog-item-model">Bosch bfg 6000</span>
-			  </a>
-			</h3>
-			<a href="#">
-			  <img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 6000">
-			</a> 
-			<p class="catalog-item-price">
-			   <span class="old-price">30500 Р.</span>
-			   <a class="catalog-item-bиtton" href="#">25500 Р.</a>
-			</p>
-		  </li>
-		  <li class="catalog-item">
-		    <h3>
-			  <a href="#">
-			    <span class="catalog-item-title">Перфоратор</span>
-				<span class="catalog-item-model">Bosch bfg 2000</span>
-			  </a>
-			</h3>
-			<a href="#">
-			  <img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 2000">
-			</a> 
-			<p class="catalog-item-price">
-			   <span class="old-price"></span>
-			   <a class="catalog-item-bиtton" href="#">12500 Р.</a>
-			</p>
-		  </li>		  
-		</ul>
-		<!--  
-		<ul class="pagination-list">
-          <li class="pagination-item pagination-item-current"><a>1</a></li>
-          <li class="pagination-item"><a href="#">2</a></li>
-          <li class="pagination-item"><a href="#">3</a></li>
-          <li class="pagination-item pagination-item-next"><a href="#">Следующая</a></li>
-        </ul>
-		-->
-	  </section>
-	  <section class="description">
-	    <h2>Пара слов о перфораторах</h2>
-	  </section>
-	</main>
-	<footer>
-	  <div class="page-footer">
-	    <div class="page-footer-contacts">
-		  <img src="#" width="1" height="1" alt="Логотип Техномарт">
-		  <p>
-		    г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-		    +7 (812) 555-05-55
-		  </p>
-		</div>
-		<ul class="bottom-navigation">
-	      <li><a href="#">Компания</a></li>
-		  <li><a href="#">Новости</a></li>
-		  <li><a href="catalog.html">Каталог</a></li>
-		  <li><a href="#">Доставка</a></li>
-		  <li><a href="#">Контакты</a></li>
-		</ul>
-		<ul class="products">
-	      <li><a href="#">Материалы</a></li>
-		  <li><a href="#">Техника</a></li>
-		  <li><a href="#">Инструмент</a></li>
-		  <li><a href="#">Спецпредложения</a></li>
-		</ul>
-	  </div>
-	  <div class="bottom-footer">
-	    <p class="copyright">
-		  © 2010–2019 Компания «Техномарт»<br>
-           Все права защищены
-		</p>
-		<div class="social">
-		  <ul class="social-list">
-		    <li><a class="social-button" href="#">Вконтакте</a></li>
-			<li><a class="social-button" href="#">Фейсбук</a></li>
-			<li><a class="social-button" href="#">Инстаграм</a></li>
-		  </ul>
-	    </div>   
-		<div class="developer">
-		  <p>
-		    Обратная связь:
-            <a href="#">mail@htmlacademy.ru</a>
-		  </p>
-		  <p>
-		    Разработано —
-            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-		  </p>	  
-		</div>
-	  </div>
-	</footer>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<title>HTML Academy: Техномарт</title>
+	</head>
+	<body>
+		<header class="main-header">
+			<div class="main-menu">
+				<a class="logo">
+					<img src="index.html" width="1" height="1" alt="Логотип Техномарт">
+				</a>
+				<!-- Поле форма поиска -->
+				<a class="bookmarks" href="#">Закладки</a>
+				<a class="basket" href="#">Корзина</a>
+				<a class="order" href="#">Оформить заказ</a>
+			</div>
+			<div class="header-center">
+				<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>  
+				<div class="contacts">
+					<p><span class="telephone">+7 (812) 555-05-55</span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+				</div>
+				<div class="user-navigation">
+					<a href="#">Равшан Джамшутович</a>          <!-- ТЗ 3.4 ссылка на профайл  -->
+					<a href="#"></a>                            <!-- ТЗ 3.4 Выход на страницу деавторизации  -->
+					<ul class="user-navigation-list">
+						<li><a href="#">Мои заказы</a></li>
+						<li><a href="#">Личный кабинет</a></li>
+					</ul>
+				</div>
+			</div>
+			<nav class="site-navigation">
+				<ul class="top-navigation">
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">Компания</a></li>
+					<li><a href="catalog.html">Каталог</a></li>
+					<li><a href="#">Новости</a></li>
+					<li><a href="#">Спецпредложения</a></li>
+					<li><a href="#">Доставка</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+			</nav>
+		</header>
+		<main>
+			<ul class="breadcrumbs">
+				<li><a href="index.html"></a></li>
+				<li><a href="catalog.html">Каталог</a></li>
+				<li><a href="tool.html">Инструмент</a></li>
+				<li class="breadcrumbs-current">Перфораторы</li>
+			</ul>
+			<h1>Перфораторы</h1>
+			<section class="filters">
+				<h2 class="visually-hidden">Фильтр товаров</h2>
+				<!-- 
+					<div class="filters-price">
+					Фильтр по цене
+					</div>
+					<div class="filters-manufacturers">
+					Фильтр по производителям
+					</div>
+					<div class="filters-nutrition">
+					Фильтр по питании
+				</div> -->
+			</section>
+			<section class="catalog">
+				<h2 class="visually-hidden">Каталог перфораторов</h2>
+				<ul class="catalog-list">
+					<li class="catalog-item">
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 3000">
+						<p class="catalog-item-price">
+							<del>22500 Р.</del>
+							<a class="catalog-item-bиtton" href="#">15500 Р.</a>
+						</p>
+					</li>
+					<li class="catalog-item">
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 6000">
+						<p class="catalog-item-price">
+							<del>30500 Р.</del>
+							<a class="catalog-item-bиtton" href="#">25500 Р.</a>
+						</p>
+					</li>
+					<li class="catalog-item">
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 2000"> 
+						<p class="catalog-item-price">
+							<span class="old-price"></span>
+							<a class="catalog-item-bиtton" href="#">12500 Р.</a>
+						</p>
+					</li>
+					<li class="catalog-item">
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 3000">
+						<p class="catalog-item-price">
+							<del>22500 Р.</del>
+							<a class="catalog-item-bиtton" href="#">15500 Р.</a>
+						</p>
+					</li>
+					<li class="catalog-item">
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 6000">
+						<p class="catalog-item-price">
+							<del>30500 Р.</del>
+							<a class="catalog-item-bиtton" href="#">25500 Р.</a>
+						</p>
+					</li>
+					<li class="catalog-item">
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 2000"> 
+						<p class="catalog-item-price">
+							<span class="old-price"></span>
+							<a class="catalog-item-bиtton" href="#">12500 Р.</a>
+						</p>
+					</li>
+					<li class="catalog-item">
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 3000">
+						<p class="catalog-item-price">
+							<del>22500 Р.</del>
+							<a class="catalog-item-bиtton" href="#">15500 Р.</a>
+						</p>
+					</li>
+					<li class="catalog-item">
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 6000">
+						<p class="catalog-item-price">
+							<del>30500 Р.</del>
+							<a class="catalog-item-bиtton" href="#">25500 Р.</a>
+						</p>
+					</li>
+					<li class="catalog-item">
+						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 2000"> 
+						<p class="catalog-item-price">
+							<span class="old-price"></span>
+							<a class="catalog-item-bиtton" href="#">12500 Р.</a>
+						</p>
+					</li>	  
+				</ul>
+				<!--  
+					<ul class="pagination-list">
+					<li class="pagination-item pagination-item-current"><a>1</a></li>
+					<li class="pagination-item"><a href="#">2</a></li>
+					<li class="pagination-item"><a href="#">3</a></li>
+					<li class="pagination-item pagination-item-next"><a href="#">Следующая</a></li>
+					</ul>
+				-->
+			</section>
+			<section class="description">
+				<h2>Пара слов о перфораторах</h2>
+			</section>
+		</main>
+		<footer class="page-footer">
+			<div class="top-footer">
+				<div class="page-footer-contacts">
+					<img src="#" width="1" height="1" alt="Логотип Техномарт">
+					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
+				</div>
+				<ul class="bottom-navigation">
+					<li><a href="#">Компания</a></li>
+					<li><a href="#">Новости</a></li>
+					<li><a href="catalog.html">Каталог</a></li>
+					<li><a href="#">Доставка</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+				<ul class="products">
+					<li><a href="#">Материалы</a></li>
+					<li><a href="#">Техника</a></li>
+					<li><a href="#">Инструмент</a></li>
+					<li><a href="#">Спецпредложения</a></li>
+				</ul>
+			</div>
+			<div class="bottom-footer">
+				<p class="copyright">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+				<div class="social">
+					<ul class="social-list">
+						<li><a class="social-button" href="#">Вконтакте</a></li>
+						<li><a class="social-button" href="#">Фейсбук</a></li>
+						<li><a class="social-button" href="#">Инстаграм</a></li>
+					</ul>
+				</div>   
+				<div class="developer">
+					<p>Обратная связь:
+						<a href="#">mail@htmlacademy.ru</a>
+					</p>
+					<p>Разработано —
+						<a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+					</p>	  
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
