--- a/catalog.html
+++ b/catalog.html
@@ -67,7 +67,7 @@
 				<ul class="catalog-list">
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 3000">
+						<img src="img\item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
 						<p class="catalog-item-price">
 							<del>22500 Р.</del>
 							<a class="catalog-item-bиtton" href="#">15500 Р.</a>
@@ -75,7 +75,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 6000">
+						<img src="img\item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
 						<p class="catalog-item-price">
 							<del>30500 Р.</del>
 							<a class="catalog-item-bиtton" href="#">25500 Р.</a>
@@ -83,7 +83,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 2000"> 
+						<img src="img\item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000"> 
 						<p class="catalog-item-price">
 							<span class="old-price"></span>
 							<a class="catalog-item-bиtton" href="#">12500 Р.</a>
@@ -91,7 +91,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 3000">
+						<img src="img\item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
 						<p class="catalog-item-price">
 							<del>22500 Р.</del>
 							<a class="catalog-item-bиtton" href="#">15500 Р.</a>
@@ -99,7 +99,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 6000">
+						<img src="img\item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
 						<p class="catalog-item-price">
 							<del>30500 Р.</del>
 							<a class="catalog-item-bиtton" href="#">25500 Р.</a>
@@ -107,7 +107,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 2000"> 
+						<img src="img\item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000"> 
 						<p class="catalog-item-price">
 							<span class="old-price"></span>
 							<a class="catalog-item-bиtton" href="#">12500 Р.</a>
@@ -115,7 +115,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
-						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 3000">
+						<img src="img\item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
 						<p class="catalog-item-price">
 							<del>22500 Р.</del>
 							<a class="catalog-item-bиtton" href="#">15500 Р.</a>
@@ -123,7 +123,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
-						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 6000">
+						<img src="img\item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
 						<p class="catalog-item-price">
 							<del>30500 Р.</del>
 							<a class="catalog-item-bиtton" href="#">25500 Р.</a>
@@ -131,7 +131,7 @@
 					</li>
 					<li class="catalog-item">
 						<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-						<img src="#" width="1" height="1" alt="Перфоратор Bosch bfg 2000"> 
+						<img src="img\item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000"> 
 						<p class="catalog-item-price">
 							<span class="old-price"></span>
 							<a class="catalog-item-bиtton" href="#">12500 Р.</a>
