--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<p>Вы можете забрать товар сами, 
 					заехав в наш офис:</p>
 					<a class="map-oll" href="#">
-						<img src="#" width="1" height="1" alt="Карта">
+						<img src="img/map.jpg" width="300" height="158" alt="Карта">
 					</a>
 					<a class="write button" href="#">Заблудились? Напишите нам!</a>
 				</div>
