Основное задание: декоративные элементы личного проекта2
попытка 2

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 				</div>
 			</footer>
 			
-			<section class="modal-letter">
-				<button class="modal-close" type="button" aria-label="закрыть окно"></button>
+			<section class="modal modal-letter">
+				<button class="modal-close" type="button" aria-label="закрыть окно">Закрыть</button>
 				<h2 class="visually-hidden">Напишите нам</h2>
 				<form class="modal-letter-form container-modal" action="" method="post">
 					<div class="modal-letter-wrapper">
@@ -169,7 +169,7 @@
 					</div>
 					<div class="letter-field">
 						<label for="text-letter">Текст письма:</label> 
-						<textarea id="text-letter" rows="10" cols="51" name="text-letter">В свободной форме</textarea>
+						<textarea id="text-letter" rows="10" cols="47" name="text-letter">В свободной форме</textarea>
 					</div>
 					<div class="tu-send">
 						<button class="button" type="submit">Отправить</button>
@@ -177,7 +177,7 @@
 				</form>
 			</section>
 			
-			<div class="modal-map">
+			<div class="modal modal-map">
 				<h2 class="visually-hidden">Карта</h2>
 				<img class="" src="img/oll-map.jpg" width="940" height="446" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
 				<button class="modal-close" type="button" aria-label="закрыть окно"></button>
