--- a/catalog.html
+++ b/catalog.html
@@ -44,7 +44,7 @@
 			</div>
 			<nav class="site-navigation container">
 				<ul class="top-navigation">
-					<li><a href="#">Главная</a></li>
+					<li><a href="index.html">Главная</a></li>
 					<li><a href="#">Компания</a></li>
 					<li><a href="catalog.html">Каталог</a></li>
 					<li><a href="#">Новости</a></li>
@@ -269,7 +269,7 @@
 				</div>
 			</footer>
 			
-			<div class="modal-information">
+			<div class="modal modal-information">
 				<button class="modal-close" type="button" aria-label="закрыть окно"></button>
 				<h2 class="modal-information-headline container-modal">Товар добавлен в корзину!</h2>
 				<div class="modal-information-wrapper">
