Основное задание: декоративные элементы личного проекта3

--- a/index.html
+++ b/index.html
@@ -169,18 +169,20 @@
 					</div>
 					<div class="letter-field">
 						<label for="text-letter">Текст письма:</label> 
-						<textarea id="text-letter" rows="10" cols="47" name="text-letter">В свободной форме</textarea>
+						<textarea id="text-letter" rows="4" cols="47" name="text-letter">В свободной форме</textarea>
 					</div>
 					<div class="tu-send">
 						<button class="button" type="submit">Отправить</button>
 					</div>
 				</form>
 			</section>
-			
+			<!--  -->
 			<div class="modal modal-map">
+			<div class="modal-map-wrapper">
 				<h2 class="visually-hidden">Карта</h2>
 				<img class="" src="img/oll-map.jpg" width="940" height="446" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
 				<button class="modal-close" type="button" aria-label="закрыть окно"></button>
+			</div>
 			</div>
 			
 		</body>
